src/test/ui/span/issue-11925.nll.stderr
error[E0597]: `x` does not live long enough
  --> $DIR/issue-11925.rs:18:35
   |
LL |         let f = to_fn_once(move|| &x); //~ ERROR does not live long enough
   |                                   ^-
   |                                   ||
   |                                   |`x` dropped here while still borrowed
   |                                   borrowed value does not live long enough

error: aborting due to previous error

For more information about this error, try `rustc --explain E0597`.
